added more thumbnails for projects

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Addyson Hangstefer</h1>
-        <img src="images/LinkedInProfilePic 2.jpg" style="width:200px; height:250px" alt="https://place-hold.it/200x200"/>
+        <img src="images/LinkedInProfilePic 2.jpg" style="width:200px; height:240px" alt="https://place-hold.it/200x200"/>
         <p><em>Full-stack software developer</em></p>
         <p>I am a full-stack software developer with a 
             creative flair. I love learning new things and 
@@ -28,9 +28,12 @@
             <li>mySQL</li>
         </ul>
         <h3>Projects</h3>
-        <a href="https://kannedbananas.herokuapp.com/#/"><img src="https://place-hold.it/200X200"/></a>
-        <a href="https://bugtracks.herokuapp.com/#/"><img src="https://place-hold.it/200X200"/></a>
-        <a href="https://grmblr.herokuapp.com/#/"><img src="https://place-hold.it/200X200"/></a>
+        <h4>Kanban</h4>
+        <a href="https://kannedbananas.herokuapp.com/#/"><img src="images/kanban_thumbnail.jpg" style="height:150px;width:200px"/></a>
+        <h4>Buglog</h4>
+        <a href="https://bugtracks.herokuapp.com/#/"><img src="images/BugLogScreenShot.png" style="height:150px;width:200px"/></a>
+        <h4>GRMblr</h4>
+        <a href="https://grmblr.herokuapp.com/#/"><img src="images/grmblr.png" style="height:150px;width:200px"/></a>
         <a href="contactMe.html"><h3>Contact me</h3></a>
  </body>
 </html>
