changed input to button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <li>Node.js</li>
             <li>MongoDB</li>
             <li>mySQL</li>
+
+            <table>
+                t
+            </table>
         </ul>
         <h3>Projects</h3>
         <h4>Kanban</h4>
@@ -35,5 +39,6 @@
         <h4>GRMblr</h4>
         <a href="https://grmblr.herokuapp.com/#/"><img src="images/grmblr.png" style="height:150px;width:200px"/></a>
         <a href="contactMe.html"><h3>Contact me</h3></a>
+        <!-- <a href="Software Developer.pdf">My Resume</a> -->
  </body>
 </html>
