--- a/contactMe.html
+++ b/contactMe.html
@@ -15,7 +15,7 @@
             <input type="email" name="YourEmail" value=""><br>
             <label>Your message:</label><br>
             <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
-            <input type="submit">
+            <button type="submit">
         </form>      
     </body>
 </html>
