--- a/contactMe.html
+++ b/contactMe.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Contact Me page</title>
+        <link rel="stylesheet" href="CSS/styles.css">
+
     </head>
     <body>
         <a href="https://www.facebook.com/addyson.hangstefer.9">Facebook</a>
@@ -15,7 +17,7 @@
             <input type="email" name="YourEmail" value=""><br>
             <label>Your message:</label><br>
             <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
-            <button type="submit">
+            <input type="submit">
         </form>      
     </body>
 </html>
