--- a/index.html
+++ b/index.html
@@ -2,43 +2,82 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Addyson's Personal Site</title>
+        <title>Addyson Hangstefer</title>
+        <link rel="stylesheet" href="CSS/styles.css">
+        <link rel="icon" href="favicon.ico">
     </head>
-    <body>
-        <h1>Addyson Hangstefer</h1>
-        <img src="images/LinkedInProfilePic 2.jpg" style="width:200px; height:240px" alt="https://place-hold.it/200x200"/>
-        <p><em>Full-stack software developer</em></p>
-        <p>I am a full-stack software developer with a 
-            creative flair. I love learning new things and 
-            building applications that help and support people's 
-            dreams and goals. The most recent tools I use are Vue, 
-            C#, and mySQL. On top of my developer side, I love drawing, 
-            the color purple, attempting to grow edible things, hanging 
-            with my friends, and all the coffee I can physically handle.
-        </p>
-        <hr/>
-        <h3>My skills</h3>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Javascript</li>
-            <li>Vue.js</li>
-            <li>Node.js</li>
-            <li>MongoDB</li>
-            <li>mySQL</li>
+    <body >
+        <div class="top-container">
+            <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+            <h1>My name is Addyson</h1>
+            <h2><em>Full-stack software developer</em></h2>
+            <img class="bottom-cloud" src="images/cloud.png">
+            <img  src="images/mountain.png">
+        </div>
 
-            <table>
-                t
-            </table>
-        </ul>
-        <h3>Projects</h3>
-        <h4>Kanban</h4>
-        <a href="https://kannedbananas.herokuapp.com/#/"><img src="images/kanban_thumbnail.jpg" style="height:150px;width:200px"/></a>
-        <h4>Buglog</h4>
-        <a href="https://bugtracks.herokuapp.com/#/"><img src="images/BugLogScreenShot.png" style="height:150px;width:200px"/></a>
-        <h4>GRMblr</h4>
-        <a href="https://grmblr.herokuapp.com/#/"><img src="images/grmblr.png" style="height:150px;width:200px"/></a>
-        <a href="contactMe.html"><h3>Contact me</h3></a>
-        <!-- <a href="Software Developer.pdf">My Resume</a> -->
+        <div class="middle-container">
+            <div class="profile">
+                <img class="profile-pic" src="images/LinkedInProfilePic 2.jpg" alt="https://place-hold.it/200x200">
+                <div class="about-me">
+
+                    <h2>Hello.</h2>
+                    <p >I am a full-stack software developer with a 
+                        creative flair. I love learning new things and 
+                        building applications that help and support people's 
+                        dreams and goals. The most recent tools I use are Vue, 
+                        C#, and mySQL. On top of my developer side, I love drawing, 
+                        the color purple, attempting to grow edible things, hanging 
+                        with my friends, and all the coffee I can physically handle.
+                    </p>
+                </div>
+              </div>
+              <hr/>
+              <div class="skills">
+                <h2>My Skills.</h2>
+                  <ul>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>Javascript</li>
+                      <li>Vue.js</li>
+                      <li>Node.js</li>
+                      <li>MongoDB</li>
+                      <li>mySQL</li>
+                    </ul>
+                </div>
+                <hr/>
+                <div class="middle-container">
+                    <div class="projects"></div>
+                    <h2>My Projects.</h2>
+                    <div class="skill-row">
+                        <a href="https://kannedbananas.herokuapp.com/#/"><img class="kanban_thumbnail" src="images/kanban_thumbnail.jpg" alt="https://place-hold.it/100X100"></a>
+                        <h3>Kanban</h3>
+                        <p class="code-description">This application allows board to be created and lists to be created on the board. On the lists tasks can be added. This project was built with Node.js and vue.</p>
+                    </div>
+                    <div class="skill-row">
+                        <a href=""><img class="bug-log" src="images/BugLogScreenShot.png" alt="https://place-hold.it/100X100"></a>
+                        <h3>Buglog</h3>
+                        <p class="code-description">This application allows you to keep track of bugs that need to be fixed. You can mark htem as open or closed when finished. Node.js and Vue were used on this application.</p>
+                    </div>
+                    <div class="skill-row">
+                        <a href=""><img class="GRMblr" src="images/grmblr.png" alt="https://place-hold.it/100X100"></a>
+                        <h3>GRMblr</h3>
+                        <p>An application that helps solve the "Where should we eat" question. This application tilizes the goole web api. The tools used for this project are Node.js and Vue.</p>
+                    </div>
+                    <hr>
+                    <div class="contactMe">
+                        <h2 >Get In Touch</h2>
+                        <h3>Lets chat.</h3>
+                        <p class="letsChat-description">We can talk about coding or art or coding and art!</p>
+                        <a class="btn mail-button" href="mailto:iamaddyson@gmail.com">CONTACT ME</a></button> 
+                    </div>
+                </div>
+            </div>
+                <div class="bottom-container">
+                    <a class="footer-link" href="https://www.facebook.com/addyson.hangstefer.9">Facebook</a>
+                    <a class="footer-link" href="https://www.linkedin.com/in/addyson-hangstefer-1081b7168/">linkedin</a>
+                    <p class="copyright" aria-hidden="true"></i>© 2020 Addyson Hangstefer.</p>
+                </div>
+        <!-- 
+                 <a href="Software Developer.pdf">My Resume</a>  -->
  </body>
 </html>
