--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body >
         <div class="top-container">
-            <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+            <!-- <img class="top-cloud" src="images/cloud.png" alt="cloud-img"> -->
             <h1>My name is Addyson</h1>
             <h2><em>Full-stack software developer</em></h2>
-            <img class="bottom-cloud" src="images/cloud.png">
+            <!-- <img class="bottom-cloud" src="images/cloud.png"> -->
             <img  src="images/mountain.png">
         </div>
 
@@ -21,7 +21,7 @@
                 <div class="about-me">
 
                     <h2>Hello.</h2>
-                    <p >I am a full-stack software developer with a 
+                    <p class="about-me-text">I am a full-stack software developer with a 
                         creative flair. I love learning new things and 
                         building applications that help and support people's 
                         dreams and goals. The most recent tools I use are Vue, 
@@ -54,12 +54,12 @@
                         <p class="code-description">This application allows board to be created and lists to be created on the board. On the lists tasks can be added. This project was built with Node.js and vue.</p>
                     </div>
                     <div class="skill-row">
-                        <a href=""><img class="bug-log" src="images/BugLogScreenShot.png" alt="https://place-hold.it/100X100"></a>
+                        <a href="https://bugtracks.herokuapp.com"><img class="bug-log" src="images/BugLogScreenShot.png" alt="https://place-hold.it/100X100"></a>
                         <h3>Buglog</h3>
                         <p class="code-description">This application allows you to keep track of bugs that need to be fixed. You can mark htem as open or closed when finished. Node.js and Vue were used on this application.</p>
                     </div>
                     <div class="skill-row">
-                        <a href=""><img class="GRMblr" src="images/grmblr.png" alt="https://place-hold.it/100X100"></a>
+                        <a href="https://grmblr.herokuapp.com/#/"><img class="GRMblr" src="images/grmblr.png" alt="https://place-hold.it/100X100"></a>
                         <h3>GRMblr</h3>
                         <p>An application that helps solve the "Where should we eat" question. This application tilizes the goole web api. The tools used for this project are Node.js and Vue.</p>
                     </div>
@@ -78,6 +78,7 @@
                     <p class="copyright" aria-hidden="true"></i>© 2020 Addyson Hangstefer.</p>
                 </div>
         <!-- 
-                 <a href="Software Developer.pdf">My Resume</a>  -->
+        
+         <a href="Software Developer.pdf">My Resume</a>  -->
  </body>
 </html>
