--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                     <div class="skill-row">
                         <a href="https://bugtracks.herokuapp.com"><img class="bug-log" src="images/BugLogScreenShot.png" alt="https://place-hold.it/100X100"></a>
                         <h3>Buglog</h3>
-                        <p class="code-description">This application allows you to keep track of bugs that need to be fixed. You can mark htem as open or closed when finished. Node.js and Vue were used on this application.</p>
+                        <p class="code-description">This application allows you to keep track of bugs that need to be fixed. You can mark them as open or closed when finished. Node.js and Vue were used on this application.</p>
                     </div>
                     <div class="skill-row">
                         <a href="https://grmblr.herokuapp.com/#/"><img class="GRMblr" src="images/grmblr.png" alt="https://place-hold.it/100X100"></a>
                         <h3>GRMblr</h3>
-                        <p>An application that helps solve the "Where should we eat" question. This application tilizes the goole web api. The tools used for this project are Node.js and Vue.</p>
+                        <p>An application that helps solve the "Where should we eat" question. This application utilizes the goole web api. The tools used for this project are Node.js and Vue.</p>
                     </div>
                     <hr>
                     <div class="contactMe">
