Added intro title

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div>
+        <h1 class="whoIAm">Hello My name is Addyson</h1>
+    </div>
     <div class="main-div">
         <a href=""></a>
         <div class="art-side">
