--- a/index.html
+++ b/index.html
@@ -6,24 +6,44 @@
     <title>Addyson Hangstefer</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="icon" href="favicon.ico">
+    <!-- bootstrap links -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--javascript links  -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div>
-        <h1 class="whoIAm">Hello My name is Addyson</h1>
-    </div>
-    <div class="main-div">
-        <a href=""></a>
-        <a href="webdevelopmentsite.html" alt="unavailable">
-            <div class="code-side">
-                <h1 class="software-heading">Software Development</h1>
+    <div class="text-center container-fluid">
+
+        <div class="row justify-content-center">
+            <h1 class="intro-title">My name is Addyson</h1>
+        </div>
+        <div class="row justify-content-center">
+
+            <div class="col-lg-4 code-side">
+                <a href="webdevelopmentsite.html">
+                    <div>
+                        <h3 class="dev-title">Software-Development</h3>
+                    </div>
+                </a>
             </div>
-        </a>
-        <div class="art-side">
-            <h1 class="art-heading">Art</h1>
-            <p>(unavailable)</p>
+
+            <div class="col-lg-4 art-side">
+                <h3>Art</h3>
+                <h5>(Unavailable)</h5>
+            </div>
         </div>
     </div>
+
 </body>
 
 </html>
