Added background images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="row justify-content-center">
 
-            <div class="col-lg-4 code-side">
+            <div class="col-lg-4 col-md-6 code-side">
                 <a href="webdevelopmentsite.html">
                     <div>
                         <h3 class="dev-title">Software-Development</h3>
@@ -37,7 +37,7 @@
                 </a>
             </div>
 
-            <div class="col-lg-4 art-side">
+            <div class="col-lg-4 col-md-6 art-side">
                 <h3>Art</h3>
                 <h5>(Unavailable)</h5>
             </div>
