--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Addyson Hangstefer</title>
-    <link rel="stylesheet" href="CSS/styles.css">
     <link rel="icon" href="favicon.ico">
-    <!-- bootstrap links -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--javascript links  -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -19,28 +15,39 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <!-- bootstrap links -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
-    <div class="text-center container-fluid">
+    <div class="container">
 
         <div class="row justify-content-center">
             <h1 class="intro-title">My name is Addyson</h1>
         </div>
-        <div class="row justify-content-center">
 
-            <div class="col-lg-4 m-auto code-side">
-                <a href="webdevelopmentsite.html">
-                    <div>
-                        <h3 class="dev-title">Software-Development</h3>
-                    </div>
-                </a>
+        <div class="row m-5">
+            <div class="col-lg-4 card code-side">
+                <h3 class="card-header">Software-Development</h3>
+                <div class="card-body">
+                    <a href="./webdevelopmentsite.html">
+                        <img class=" card-img" src="./images/pankaj-patel-_SgRNwAVNKw-unsplash.jpg"></img>
+                    </a>
+                </div>
             </div>
 
-            <div class="col-lg-4  art-side">
-                <h3>Art</h3>
-                <h5>(Unavailable)</h5>
+            <div class="col-lg-4 card art-side">
+                <div class="card-header">
+                    <h3>Art</h3>
+                    <h6 class="card-subtitle">(Unavailable)</h6>
+                </div>
+                <div class="card-body">
+                    <img class="card-img" src="./images/GalaxyButterflies.jpg"></img>
+                </div>
             </div>
+
         </div>
     </div>
 
