Art Portfolio added

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
 
             <div class="col-lg-4 card art-side">
                 <div class="card-header">
-                    <h3>Art</h3>
-                    <h6 class="card-subtitle">(Unavailable)</h6>
+                    <h3>ArtWork Portfolio</h3>
+                    <!-- <h6 class="card-subtitle">(Unavailable)</h6> -->
                 </div>
                 <div class="card-body">
-                    <img class="card-img" src="./images/GalaxyButterflies.jpg"></img>
+                    <a href="https://www.artstation.com/butterflyblossom" alt="Portfolio" <img class="card-img"
+                        src="./images/GalaxyButterflies.jpg"></img>
+                    </a>
                 </div>
             </div>
 
