fixed small bug

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     <!-- <h6 class="card-subtitle">(Unavailable)</h6> -->
                 </div>
                 <div class="card-body">
-                    <a href="https://www.artstation.com/butterflyblossom" alt="Portfolio" <img class="card-img"
-                        src="./images/GalaxyButterflies.jpg"></img>
+                    <a href="https://www.artstation.com/butterflyblossom" alt="Portfolio">
+                        <img class="card-img" src="./images/GalaxyButterflies.jpg"></img>
                     </a>
                 </div>
             </div>
