Added TinDog web design

--- a/webdevelopmentsite.html
+++ b/webdevelopmentsite.html
@@ -74,6 +74,14 @@
                 <p>An application that helps solve the "Where should we eat" question. This application utilizes the
                     goole web api. The tools used for this project are Node.js and Vue.</p>
             </div>
+            <div class="skill-row">
+                <img class="tinDog" src="images/TinDogPic.png" alt="http://place-hold.it/100X100">
+                <a href="TinDog/TinDog-Start-master/index.html">
+                    <h3>TinDog</h3>
+                </a>
+                <p>In my quest to better myself in responsive web design, I learned how to build this TinDog website.
+                </p>
+            </div>
             <hr>
             <div class="contactMe">
                 <h2>Get In Touch</h2>
