cut out image for test

--- a/webdevelopmentsite.html
+++ b/webdevelopmentsite.html
@@ -75,7 +75,7 @@
                     goole web api. The tools used for this project are Node.js and Vue.</p>
             </div>
             <div class="skill-row">
-                <img class="tinDog" src="images/TinDogPic.png" alt="http://place-hold.it/100X100">
+                <!-- <img class="tinDog" src="images/TinDogPic.png" alt="http://place-hold.it/100X100"> -->
                 <a href="TinDog/TinDog-Start-master/index.html">
                     <h3>TinDog</h3>
                 </a>
