--- a/webdevelopmentsite.html
+++ b/webdevelopmentsite.html
@@ -58,14 +58,14 @@
                 <p class="code-description">This application allows board to be created and lists to be created on the
                     board. On the lists tasks can be added. This project was built with Node.js and vue.</p>
             </div>
-            <div class="skill-row">
+            <!-- <div class="skill-row">
                 <img class="bug-log" src="images/BugLogScreenShot.png" alt="https://place-hold.it/100X100">
                 <a href="https://bugtracks.herokuapp.com">
                     <h3>Buglog</h3>
                 </a>
                 <p class="code-description">This application allows you to keep track of bugs that need to be fixed. You
                     can mark them as open or closed when finished. Node.js and Vue were used on this application.</p>
-            </div>
+            </div> -->
             <div class="skill-row">
                 <img class="GRMblr" src="images/grmblr.png" alt="https://place-hold.it/100X100">
                 <a href="https://grmblr.herokuapp.com/#/">
@@ -74,7 +74,7 @@
                 <p>An application that helps solve the "Where should we eat" question. This application utilizes the
                     goole web api. The tools used for this project are Node.js and Vue.</p>
             </div>
-            <div class="skill-row">
+            <!-- <div class="skill-row">
                 <img class="tinDog" src="images/celine-sayuri-tagami-2s6ORaJY6gI-unsplash.jpg"
                     alt="http://place-hold.it/100X100">
                 <a href="TinDog/TinDog-Start-master/index.html">
@@ -82,7 +82,7 @@
                 </a>
                 <p>In my quest to better myself in responsive web design, I learned how to build this TinDog website.
                 </p>
-            </div>
+            </div> -->
             <hr>
             <div class="contactMe">
                 <h2>Get In Touch</h2>
