--- a/webdevelopmentsite.html
+++ b/webdevelopmentsite.html
@@ -6,19 +6,144 @@
     <title>Addyson Hangstefer</title>
     <link rel="stylesheet" href="CSS/webStyles.css">
     <link rel="icon" href="favicon.ico">
+    <!--javascript links  -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <!-- bootstrap links -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- my stylesheet -->
+    <link rel="stylesheet" href="CSS/webStyles.css">
 </head>
 
-<body class="webdevelopment-body">
-    <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-        <h1>My name is Addyson</h1>
-        <h2><em>Full-stack software developer</em></h2>
-        <img class="bottom-cloud" src="images/cloud.png">
-        <img src="images/mountain.png">
+<body class="container-fluid">
+    <div class="row">
+        <div class="col-12 intro-title">
+            <h1>Hello. <br> My Name is Addyson</h1>
+        </div>
     </div>
 
-    <div class="middle-container">
-        <div class="profile">
+    <div class="row justify-content-center">
+        <div class=" card col-lg-2 col-md-6 col-sm-12" data-toggle="modal" data-target="#exampleModalCenter">
+            <img class="profile-pic " src="images/LinkedInProfilePic 2.jpg">
+        </div>
+
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Bio</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        I am a full-stack software developer with a
+                        creative flair. I love learning new things and
+                        building applications that help and support people's
+                        dreams and goals. The most recent tools I use are Vue,
+                        C#, and mySQL. On top of my developer side, I love drawing,
+                        the color purple, attempting to grow edible things, hanging
+                        with my friends, and all the coffee I can physically handle.
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="skills col-lg-2 col-md-6 col-sm-12">
+            <h2>My Skills.</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>Vue.js</li>
+                <li>Node.js</li>
+                <li>MongoDB</li>
+                <li>mySQL</li>
+            </ul>
+        </div>
+        <div class="projects col-lg-5 col-md-6 col-sm-12">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href="https://grmblr.herokuapp.com/#/"><img class="d-block w-100" src="images/grmblr.png"
+                                alt="First slide">
+                            <div class="grmblr carousel-caption d-none d-md-block">
+                                <h5>GRMBler</h5>
+                                <p>An application that helps solve the "Where should we eat" question. This application
+                                    utilizes
+                                    the
+                                    goole web api. The tools used for this project are Node.js and Vue.</p>
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="carousel-item">
+                        <a href="https://kannedbananas.herokuapp.com/#/"><img class="d-block w-100"
+                                src="images/kanban_thumbnail.jpg" alt="Second slide">
+                            <div class="kanban carousel-caption d-none d-md-block">
+                                <h5>Kanban</h5>
+                                <p>This application allows board to be created and lists to be
+                                    created on the
+                                    board. On the lists tasks can be added. This project was built with Node.js and vue.
+                                </p>
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="row footer fixed-bottom p-2">
+        <a class="btn mail-button p-3" href="mailto:iamaddyson@gmail.com">CONTACT ME</a></button>
+        <a class="footer-link p-3" href="https://www.linkedin.com/in/addyson-hangstefer-1081b7168/">linkedin</a>
+        <a class="footer-link p-3" href="https://github.com/AddysonH">Github</a>
+        <p class="copyright p-3 position-right" aria-hidden="true"></i>© 2020 Addyson Hangstefer.</p>
+
+    </div>
+
+</body>
+
+<!-- <div class="top-container"> -->
+<!-- <img class="top-cloud" src="images/cloud.png" alt="cloud-img"> -->
+<!-- <h1>My name is Addyson</h1> -->
+<!-- <h2><em>Full-stack software developer</em></h2> -->
+<!-- <img class="bottom-cloud" src="images/cloud.png"> -->
+<!-- <img src="images/mountain.png"> -->
+<!-- </div> -->
+
+<!-- <div class="middle-container"> -->
+<!-- <div class="profile">
             <img class="profile-pic" src="images/LinkedInProfilePic 2.jpg" alt="https://place-hold.it/200x200">
             <div class="about-me">
 
@@ -32,9 +157,9 @@
                     with my friends, and all the coffee I can physically handle.
                 </p>
             </div>
-        </div>
-        <hr />
-        <div class="skills">
+        </div> -->
+<!-- <hr /> -->
+<!-- <div class="skills">
             <h2>My Skills.</h2>
             <ul>
                 <li>HTML</li>
@@ -45,10 +170,10 @@
                 <li>MongoDB</li>
                 <li>mySQL</li>
             </ul>
-        </div>
-        <hr />
-        <div class="middle-container">
-            <div class="projects"></div>
+        </div> -->
+<!-- <hr /> -->
+<!-- <div class="middle-container"> -->
+<!-- <div class="projects"></div>
             <h2>My Projects.</h2>
             <div class="skill-row">
                 <img class="kanban_thumbnail" src="images/kanban_thumbnail.jpg" alt="https://place-hold.it/100X100">
@@ -57,8 +182,8 @@
                 </a>
                 <p class="code-description">This application allows board to be created and lists to be created on the
                     board. On the lists tasks can be added. This project was built with Node.js and vue.</p>
-            </div>
-            <!-- <div class="skill-row">
+            </div> -->
+<!-- <div class="skill-row">
                 <img class="bug-log" src="images/BugLogScreenShot.png" alt="https://place-hold.it/100X100">
                 <a href="https://bugtracks.herokuapp.com">
                     <h3>Buglog</h3>
@@ -66,15 +191,15 @@
                 <p class="code-description">This application allows you to keep track of bugs that need to be fixed. You
                     can mark them as open or closed when finished. Node.js and Vue were used on this application.</p>
             </div> -->
-            <div class="skill-row">
+<!-- <div class="skill-row">
                 <img class="GRMblr" src="images/grmblr.png" alt="https://place-hold.it/100X100">
                 <a href="https://grmblr.herokuapp.com/#/">
                     <h3>GRMblr</h3>
                 </a>
                 <p>An application that helps solve the "Where should we eat" question. This application utilizes the
                     goole web api. The tools used for this project are Node.js and Vue.</p>
-            </div>
-            <!-- <div class="skill-row">
+            </div> -->
+<!-- <div class="skill-row">
                 <img class="tinDog" src="images/celine-sayuri-tagami-2s6ORaJY6gI-unsplash.jpg"
                     alt="http://place-hold.it/100X100">
                 <a href="TinDog/TinDog-Start-master/index.html">
@@ -83,23 +208,21 @@
                 <p>In my quest to better myself in responsive web design, I learned how to build this TinDog website.
                 </p>
             </div> -->
-            <hr>
-            <div class="contactMe">
+<!-- <hr> -->
+<!-- <div class="contactMe">
                 <h2>Get In Touch</h2>
                 <h3>Lets chat.</h3>
                 <p class="letsChat-description">We can talk about coding or art or coding and art!</p>
                 <a class="btn mail-button" href="mailto:iamaddyson@gmail.com">CONTACT ME</a></button>
-            </div>
-        </div>
-    </div>
-    <div class="bottom-container">
+            </div> -->
+<!-- </div> -->
+<!-- </div> -->
+<!-- <div class="bottom-container">
         <a class="footer-link" href="SoftwareDeveloper.pdf">My Resume</a>
         <a class="footer-link" href="https://github.com/AddysonH">Github</a>
         <a class="footer-link" href="https://www.linkedin.com/in/addyson-hangstefer-1081b7168/">linkedin</a>
         <p class="copyright" aria-hidden="true"></i>© 2020 Addyson Hangstefer.</p>
-    </div>
+    </div> -->
 
 
-    <!-- <a href="Software Developer.pdf">My Resume</a> -->
-
-</body>
+<!-- <a href="Software Developer.pdf">My Resume</a> -->
