--- a/webdevelopmentsite.html
+++ b/webdevelopmentsite.html
@@ -105,7 +105,15 @@
                                     created on the
                                     board. On the lists tasks can be added. This project was built with Node.js and vue.
                                 </p>
-                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="design1/index.html"><img class="d-block w-100" src="design1/images/Design1.png"
+                                alt="Second slide">
+                            <div class="kanban carousel-caption d-none d-md-block">
+                                <h5>Design1</h5>
+                                <p>Getting web design practice</p>
                             </div>
                         </a>
                     </div>
